--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_i1.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_i1.xml
@@ -90,29 +90,27 @@
 
     <TextView
         android:id="@+id/textViewToPageBI1"
-        android:layout_width="49dp"
-        android:layout_height="18dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:onClick="IBonClick"
         android:text="保健區"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.276"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.992" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageButtonToPageBI1"
+        app:layout_constraintEnd_toEndOf="@+id/imageButtonToPageBI1"
+        app:layout_constraintStart_toStartOf="@+id/imageButtonToPageBI1"
+        app:layout_constraintTop_toTopOf="@+id/imageButtonToPageBI1"
+        app:layout_constraintVertical_bias="0.9" />
 
     <TextView
         android:id="@+id/textViewToPageJI1"
-        android:layout_width="44dp"
-        android:layout_height="18dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:onClick="IJonClick"
         android:text="領養區"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.732"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.992" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageButtonToPageJI1"
+        app:layout_constraintEnd_toEndOf="@+id/imageButtonToPageJI1"
+        app:layout_constraintStart_toStartOf="@+id/imageButtonToPageJI1"
+        app:layout_constraintTop_toTopOf="@+id/imageButtonToPageJI1"
+        app:layout_constraintVertical_bias="0.9" />
 
     <TextView
         android:id="@+id/textViewToPageOI1"
@@ -120,37 +118,35 @@
         android:layout_height="16dp"
         android:onClick="IOonClick"
         android:text="個人資料"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.994"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.99" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageButtonToPageOI1"
+        app:layout_constraintEnd_toEndOf="@+id/imageButtonToPageOI1"
+        app:layout_constraintStart_toStartOf="@+id/imageButtonToPageOI1"
+        app:layout_constraintTop_toTopOf="@+id/imageButtonToPageOI1"
+        app:layout_constraintVertical_bias="0.849" />
 
     <TextView
         android:id="@+id/textViewToPageAI1"
-        android:layout_width="63dp"
-        android:layout_height="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:onClick="IAonClick"
         android:text="動態消息"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.031"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.99" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageButtonToPageAI1"
+        app:layout_constraintEnd_toEndOf="@+id/imageButtonToPageAI1"
+        app:layout_constraintStart_toStartOf="@+id/imageButtonToPageAI1"
+        app:layout_constraintTop_toTopOf="@+id/imageButtonToPageAI1"
+        app:layout_constraintVertical_bias="0.9" />
 
     <TextView
         android:id="@+id/textViewToPageHI1"
-        android:layout_width="63dp"
-        android:layout_height="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:onClick="IHonClick"
         android:text="殯葬服務"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.99" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageButtonToPageHI1"
+        app:layout_constraintEnd_toEndOf="@+id/imageButtonToPageHI1"
+        app:layout_constraintStart_toStartOf="@+id/imageButtonToPageHI1"
+        app:layout_constraintTop_toTopOf="@+id/imageButtonToPageHI1"
+        app:layout_constraintVertical_bias="0.9" />
 
     <ImageButton
         android:id="@+id/imageButtonADI"
