--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_f.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_f.xml
@@ -71,7 +71,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/ic_baseline_local_hospital_24"
+        app:srcCompat="@drawable/ic_baseline_house_24"
         tools:srcCompat="@drawable/ic_baseline_house_24" />
 
     <ImageButton
@@ -90,67 +90,64 @@
 
     <TextView
         android:id="@+id/textViewToPageBF"
-        android:layout_width="49dp"
-        android:layout_height="18dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:onClick="FBonClick"
         android:text="保健區"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.276"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.992" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageButtonToPageBF"
+        app:layout_constraintEnd_toEndOf="@+id/imageButtonToPageBF"
+        app:layout_constraintStart_toStartOf="@+id/imageButtonToPageBF"
+        app:layout_constraintTop_toTopOf="@+id/imageButtonToPageBF"
+        app:layout_constraintVertical_bias="0.88" />
 
     <TextView
         android:id="@+id/textViewToPageJF"
-        android:layout_width="44dp"
-        android:layout_height="17dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:onClick="FJonClick"
         android:text="領養區"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.741"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/imageButtonToPageJF"
+        app:layout_constraintEnd_toEndOf="@+id/imageButtonToPageJF"
+        app:layout_constraintHorizontal_bias="0.538"
+        app:layout_constraintStart_toStartOf="@+id/imageButtonToPageJF"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.991" />
 
     <TextView
         android:id="@+id/textViewToPageAF"
-        android:layout_width="63dp"
-        android:layout_height="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:onClick="FAonClick"
         android:text="動態消息"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.031"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.99" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageButtonToPageAF"
+        app:layout_constraintEnd_toEndOf="@+id/imageButtonToPageAF"
+        app:layout_constraintStart_toStartOf="@+id/imageButtonToPageAF"
+        app:layout_constraintTop_toTopOf="@+id/imageButtonToPageAF"
+        app:layout_constraintVertical_bias="0.9" />
 
     <TextView
         android:id="@+id/textViewToPageOF"
-        android:layout_width="63dp"
-        android:layout_height="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:onClick="FOonClick"
         android:text="個人資料"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.994"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.99" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageButtonToPageOF"
+        app:layout_constraintEnd_toEndOf="@+id/imageButtonToPageOF"
+        app:layout_constraintStart_toStartOf="@+id/imageButtonToPageOF"
+        app:layout_constraintTop_toTopOf="@+id/imageButtonToPageOF"
+        app:layout_constraintVertical_bias="0.84" />
 
     <TextView
         android:id="@+id/textViewToPageHF"
-        android:layout_width="63dp"
-        android:layout_height="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:onClick="FHonClick"
         android:text="殯葬服務"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.99" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageButtonToPageHF"
+        app:layout_constraintEnd_toEndOf="@+id/imageButtonToPageHF"
+        app:layout_constraintStart_toStartOf="@+id/imageButtonToPageHF"
+        app:layout_constraintTop_toTopOf="@+id/textView124"
+        app:layout_constraintVertical_bias="0.846" />
 
     <EditText
         android:id="@+id/editTextDateF"
